Version 1.0.24:
- Remove gnulib, for simplicity and maintainability.
- Update GNU autotools files, in particular configure.ac.

Version 1.0.23:
- Fix authentication with SCRAM-SHA-1 via libgsasl. Reported and analyzed by
  Steffen Lehmann.

Version 1.0.22:
- Add a new received_header command and --received-header option, to disable
  the Received header if required.
- Update gnulib to 2010-12-23.
- Add a new passwordeval command and --passwordeval option, to set the password
  from the output of a command. Written by Martin Stenberg for msmtp.

Version 1.0.21:
- Update gnulib to 2010-07-03.
- Report platform in --version output.
- Fix building with newer OpenSSL versions. Reported and tested by Peter Baur
  for msmtp.
- Fixed building without TLS/SSL support. Reported by Tan Ker Vin for msmtp.

Version 1.0.20:
- Update gnulib to 2010-03-20.
- Support authentication mechanism SCRAM-SHA-1 via GNU SASL.
- New command tls_fingerprint to trust one particular TLS certificate.
- Change whitespace: Avoid tabs and whitespace at end of lines.
- Fix Mac OS X Keychain support to use POP3 instead of SMTP passwords.
- Update the documentation of keyring usage.
- Add the mpop-gnome-tool.py script to manage Gnome Keyring passwords for
  mpop. Thanks to Gaizka Villate and Emmanuel Bouthenot.
- Fix single quotes in man page.
- Add pt_BR translation, provided by Rudá Moura. Thanks!

Version 1.0.19:
- Properly handle NUL characters in the Common Name or Subject Alternative
  Name fields of certificates when using OpenSSL. This fixes the security
  problem described in <http://www.blackhat.com/presentations/bh-usa-09/
  MARLINSPIKE/BHUSA09-Marlinspike-DefeatSSL-PAPER1.pdf>.
- Properly mask minus characters in the man page to prevent groff from
  converting them to hyphens. Reported by Emmanuel Bouthenot.
- Handle network share names correctly when creating directories for UIDLS
  files on W32. Bug reported by Dan.